fix(layer-selector-ui): fix text covering checkbox
truncate text before it covers visibility checkboxes

Closes #10071

--- a/src/css/side-panel/categories.less
+++ b/src/css/side-panel/categories.less
@@ -639,6 +639,7 @@
             margin-top: -3px;
             margin-left: 2px;
             line-height: 1.5em;
+            width: 273px;
         }
 
         .layer-notices {
